<resources>
    <string name="app_name">LovEat!</string>
    <string name="nameLabel">Name: </string>
    <string name="namePerson"><i>Luigis</i></string>

    <string name="telephoneLabel">Phone: </string>
    <string name="firstPhone"><i>800-8008123</i></string>

    <string name="openingHoursLabel">Opening hours</string>
    <string name="firstHours">9:00 - 21:00</string>
    <string name="addressLabel">Address: </string>
    <string name="addressText"><i>Via Roma, 48</i></string>

    <string name="emailLabel">Email: </string>
    <string name="emailExample"><i>ex@example.com</i></string>

    <string name="descriptionLabel">Description: </string>
    <string name="descriptionText">Max 5 lines...</string>

    <string name="userPic">User Picture</string>
    <string name="choosePic">Choose Pic Button</string>

    <string name="edit_action">Edit</string>
    <string name="menu_refresh">Refresh</string>

    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_edit">EditActivity</string>

    <string name="saveButton">SAVE</string>

    <string name="title_activity_main">Reservations</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">Restaurant</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_daily_offer">Your Daily Menu</string>
    <string name="title_activity_daily_offer_edit">Add Food</string>
    <string name="title_activity_daily_offer_edit_favorite">Add Favorite Food</string>
    <string name="save_as_favorite">Save as favorite</string>
    <string name="current_money">\u20ac</string>

    <string name="delete">DELETE</string>
    <string name="cookProcess">ACCEPT</string>
    <string name="endProcess">READY</string>

    <string name="timeLabel">Time:</string>

    <string-array name="planets_array">
        <item>Saturday</item>
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
    </string-array>

    <string name="foodpriceLabel">price</string>
    <string name="foodPrice">$</string>
    <string name="AvailableQuantity">Available quantity: </string>
    <string name="AvailableQuantityEdit">10</string>
    <string name="EditDescription">Delicious</string>
    <string name="textDescription">Description and ingredients</string>
    <string name="editFoodname">pasta</string>
    <string name="btnCreat">Create</string>

    <string name="price">Price: </string>


    <string name="addNew">Add new</string>
    <string name="addFavorite">Favorites</string>

    <string name="title_activity_reservation">ReservationActivity</string>
    <string name="tab_incoming">Incoming</string>
    <string name="tab_preparation">In preparation</string>
    <string name="tab_to_delivery">Ready to go</string>

    <string name="login_text">LOGIN</string>
    <string name="sign_up_link"><u>No account yet? Create one</u></string>
    <string name="reset_pwd_link"><u>Forgot your password?</u></string>
    <string name="or_string">or</string>
    <string name="minimum_password_length">Password too short, enter minimum 8 characters.</string>
    <string name="auth_failed">Authentication failed.</string>
    <string name="title_activity_restaurant_sign_up">SignUp</string>
    <string name="sign_up_welcome_text">WELCOME</string>
    <string name="login_link"><u>Already have an account? Login me</u></string>
    <string name="sign_up_text">Sign Up</string>
    <string name="title_activity_restaurant_reset_pwd">RestaurantResetPwdActivity</string>
    <string name="forgot_pwd_text">Forgot your password?</string>
    <string name="reset_target_text">We will send you an email with password reset instructions. Please enter your email</string>
    <string name="resetbtn_text">Reset</string>

    <string name="logout">Log Out</string>

    <string name="flagText">Help people to find you quickly:</string>

    <string name="new_order">New Order</string>
    <string name="title_activity_find_nearest_rider">FindNearestRiderActivity</string>

    <string name="callRider">Deliver</string>
    <string name="title_activity_statistics">StatisticsActivity</string>
    <string name="title_activity_review">ReviewActivity</string>
    <string name="title_activity_restaurant_review">RestaurantReviewActivity</string>
    <string name="title_activity_sold_order">SoldOrderActivity</string>

    <string name="date">1-6-2019</string>
</resources>
