<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileEditActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#ff751A"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="56dp"
        android:layout_marginRight="16dp"
        android:background="#F6F6F5">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="80dp">

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="199dp"
                    android:layout_height="198dp"
                    android:contentDescription="@string/userPic"
                    android:src="@drawable/default_user_image" />

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@id/imageView1"
                    android:layout_alignBottom="@+id/imageView1"
                    android:contentDescription="@string/choosePic"
                    android:src="@drawable/baseline_photo_camera_black_24dp" />
            </RelativeLayout>

            <TextView
                android:id="@+id/textViewNameLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:text="@string/nameLabel" />
            <EditText
                android:id="@+id/editTextName"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:inputType="textPersonName"
                android:textSize="20sp"
                android:hint="@string/namePerson"/>

            <TextView
                android:id="@+id/textViewTelephoneLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/telephoneLabel"/>
            <EditText
                android:id="@+id/editTextTelephone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:textSize="20sp"
                android:hint="@string/firstPhone">
            </EditText>

            <TextView
                android:id="@+id/textViewHoursLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/openingHoursLabel"/>
            <EditText
                android:id="@+id/editTextHours"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="20sp"
                android:hint="@string/firstHours"/>

            <TextView
                android:id="@+id/textViewAddressLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/addressLabel"/>
            <EditText
                android:id="@+id/editTextAddress"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="20sp"
                android:hint="@string/addressText">
            </EditText>

            <TextView
                android:id="@+id/textViewEmailLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/emailLabel" />
            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:inputType="textEmailAddress"
                android:textSize="20sp"
                android:hint="@string/emailExample"/>

            <TextView
                android:id="@+id/textViewDescriptionLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/descriptionLabel" />
            <EditText
                android:id="@+id/editTextDescription"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:gravity="top|left"
                android:scrollbars="vertical"
                android:lines="5"
                android:maxLines="10"
                android:textSize="20sp"
                android:hint="@string/descriptionText"/>

            <TextView
                android:id="@+id/textViewFlagsLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/flagText"
                android:layout_marginTop="4dp"/>

            <it.polito.mad.appcomplete.MultiSelectionSpinner
                android:id="@+id/myMultipleChoiceSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp" />
            
            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:text="@string/saveButton" />
        </LinearLayout>

    </ScrollView>
</android.support.design.widget.CoordinatorLayout>