<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="it.polito.mad.appcomplete.ProfileActivity">

    <item
        android:id="@+id/new_order_incoming"
        android:title="@string/new_order"
        android:icon="@drawable/notification_button"
        android:visible="true"
        app:showAsAction="always" />

    <item
        android:id="@+id/edit_action"
        android:title="@string/edit_action"
        android:orderInCategory="1"
        android:icon="@drawable/edit_button_image"
        android:visible="true"
        app:showAsAction="always" />

    <item
        android:id="@+id/logoutButton"
        android:title="@string/logout"
        android:orderInCategory="2"
        android:icon="@drawable/logout_button"
        android:visible="true"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/menu_refresh"
        android:title="@string/menu_refresh"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
