<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#ff751A"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="#F6F6F5">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="199dp"
                android:layout_height="198dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="96dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:contentDescription="@string/userPic"
                android:src="@drawable/default_user_image" />

            <TextView
                android:id="@+id/textViewNameLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/nameLabel"/>
            <TextView
                android:id="@+id/textViewName"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:textSize="15sp"
                android:hint="@string/namePerson">
            </TextView>

            <TextView
                android:id="@+id/textViewTelephoneLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/telephoneLabel"/>
            <TextView
                android:id="@+id/textViewTelephone"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:textSize="15sp"
                android:hint="@string/firstPhone">
            </TextView>

            <TextView
                android:id="@+id/textViewAddressLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/addressLabel"/>
            <TextView
                android:id="@+id/textViewAddress"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:textSize="15sp"
                android:hint="@string/addressText">
            </TextView>

            <TextView
                android:id="@+id/textViewEmailLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/emailLabel"/>
            <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:textSize="15sp"
                android:hint="@string/emailExample">
            </TextView>

            <TextView
                android:id="@+id/textViewDescriptionLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/descriptionLabel"/>
            <TextView
                android:id="@+id/textViewDescription"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:lines="5"
                android:textSize="15sp"
                android:hint="@string/descriptionText">
            </TextView>

        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>