<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReservationEditActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="56dp"
        android:layout_marginRight="16dp"
        android:background="#F6F6F5">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            >

            <TextView
                android:id="@+id/person_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:textColor="#262626"
                android:text="@string/nameLabel"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/person_name_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/person_name"
                android:layout_marginBottom="12dp"
                android:textColor="#262626"
                android:inputType="textPersonName"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/reservation_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/person_name_edit"
                android:textColor="#262626"
                android:text="@string/timeLabel"
                android:textSize="25sp" />
            <EditText
                android:id="@+id/reservation_time_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/reservation_time"
                android:textColor="#262626"
                android:inputType="time"
                android:layout_marginBottom="12dp"
                android:textSize="30sp" />


            <TextView
                android:id="@+id/person_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/reservation_time_edit"
                android:textColor="#262626"
                android:text="@string/addressLabel"
                android:textSize="25sp" />
            <EditText
                android:id="@+id/person_address_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/person_address"
                android:textColor="#262626"
                android:inputType="textPostalAddress"
                android:layout_marginBottom="12dp"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/person_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/person_address_edit"
                android:textColor="#262626"
                android:text="@string/emailLabel"
                android:textSize="25sp" />
            <EditText
                android:id="@+id/person_email_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/person_email"
                android:textColor="#262626"
                android:inputType="textEmailAddress"
                android:layout_marginBottom="12dp"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/person_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/person_email_edit"
                android:textColor="#262626"
                android:text="@string/telephoneLabel"
                android:textSize="25sp" />
            <EditText
                android:id="@+id/person_phone_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/person_phone"
                android:textColor="#262626"
                android:inputType="phone"
                android:layout_marginBottom="12dp"
                android:textSize="30sp" />

            <Button
                android:id="@+id/saveReservationButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/person_phone_edit"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/saveButton" />
        </RelativeLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>